force-app/main/default/objects/wkdw__HealthVerification__c/wkdw__HealthVerification__c.object-meta.xml
<CustomObject>
    <label>Health Verification</label>
    <nameField>
        <displayFormat>HV-{0000000000}</displayFormat>
        <label>Health Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Verifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>