force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__Case__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Health Verifications</relationshipLabel>
    <relationshipName>Health_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>