force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__DeclinationReason__c.field-meta.xml
<CustomField>
    <fullName>wkdw__DeclinationReason__c</fullName>
    <description>This field captures the reason the employee declined an available health verification</description>
    <label>Declination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>