force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__Declined__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declined</label>
    <type>Checkbox</type>
</CustomField>