force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__Employee__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field connects the Vaccination record to the related Employee record</description>
    <label>Employee</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Health Verifications</relationshipLabel>
    <relationshipName>Health_Verifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>