force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__HealthCredentialDocumentDate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__HealthCredentialDocumentDate__c</fullName>
    <description>This field captures the date that the health credential was issued. Verifiers may need to confirm if this also reflects the date that the related health event occurred</description>
    <label>Health Credential Document Date</label>
    <type>Date</type>
</CustomField>