force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__HealthCredentialExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__HealthCredentialExpirationDate__c</fullName>
    <description>This field tracks health verification expirations. For example, how often does an employee require a test, or, when does a vaccination require a booster based on local health authority guidance?</description>
    <label>Health Credential Expiration Date</label>
    <type>Date</type>
</CustomField>