force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__Status__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Status__c</fullName>
    <description>This field captures the status of the end-user&apos;s health verification status based on the submitted information.</description>
    <label>Health Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>