force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__Type__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Type__c</fullName>
    <label>Health Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proof of Vaccination</fullName>
            </value>
            <value>
                <fullName>Negative COVID-19 Test Results</fullName>
            </value>
            <value>
                <fullName>Documentation of COVID-19 Recovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>