force-app/main/default/objects/wkdw__HealthVerification__c/fields/wkdw__VerificationDate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__VerificationDate__c</fullName>
    <description>This field captures the date that an organization member verified the end user’s health credential.</description>
    <label>Verification Date</label>
    <type>DateTime</type>
</CustomField>