force-app/main/default/objects/wkdw__HealthVerification__c/listViews/wkdw__All.listView-meta.xml
<ListView>
    <fullName>wkdw__All</fullName>
    <columns>NAME</columns>
    <columns>wkdw__Declined__c</columns>
    <columns>wkdw__Employee__c</columns>
    <columns>wkdw__Type__c</columns>
    <columns>wkdw__Status__c</columns>
    <columns>wkdw__VerificationDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>